# little-canary

./: .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  INTENT.md  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  publish.yml
assets/: preview-source.txt  preview-spec.md
benchmarks/: README.md  build_external_datasets.py  full_pipeline_test.py  multi_model_benchmark.py  raw_baseline_benchmark.py
benchmarks/results_external_attacks/: baseline_dolphin3_8b_tensortrust-sample-400.json  baseline_gemma3_12b_tensortrust-sample-400.json  baseline_llama3.1_8b_tensortrust-sample-400.json  baseline_llama3.2_latest_tensortrust-sample-400.json  baseline_mistral_7b_tensortrust-sample-400.json  baseline_qwen3_4b_tensortrust-sample-400.json
benchmarks/results_external_attacks/model_comparison/: benchmark_log.txt  comparison_summary.json
examples/: clawdbot_example.py
little_canary/: __init__.py  analyzer.py  audit_logger.py  canary.py  canary_guard.py  cli.py  demo.py  judge.py  openai_provider.py  pipeline.py  server.py  structural_filter.py
tests/: test_analyzer.py  test_audit_logger.py  test_canary.py  test_canary_guard.py  test_cli.py  test_demo.py  test_judge.py  test_openai_provider.py  test_pipeline.py  test_server.py
