[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "little-canary"
version = "0.3.0"
description = "Prompt injection detection for LLM apps using sacrificial canary-model probes and structural preflight checks"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
authors = [
    {name = "Hermes Labs", email = "roli@hermes-labs.ai"},
]
keywords = ["llm", "security", "prompt-injection", "prompt-injection-detection", "ai-safety", "canary", "agent-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.32.4",
]

[project.optional-dependencies]
benchmark = [
    "anthropic>=0.96.0",
]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "mypy>=1.19.1",
    "ruff>=0.15.11",
    "pip-audit>=2.9.0",
    "anthropic>=0.96.0",
]

[project.scripts]
little-canary = "little_canary.cli:main"

[project.urls]
Homepage = "https://hermes-labs.ai"
Repository = "https://github.com/hermes-labs-ai/little-canary"
Issues = "https://github.com/hermes-labs-ai/little-canary/issues"
Documentation = "https://github.com/hermes-labs-ai/little-canary#readme"
Changelog = "https://github.com/hermes-labs-ai/little-canary/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["little_canary*"]

[tool.setuptools.package-data]
little_canary = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests that require network mocking",
]

[tool.coverage.run]
source = ["little_canary"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP007", "E501", "SIM102", "SIM110", "SIM300"]
